--- a/front/package.json
+++ b/front/package.json
@@ -25,15 +25,10 @@
     "file-loader": "^0.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-hot-loader": "^3.0.0-beta.2",
-    "react-redux": "^4.4.5",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "next",
-    "redux": "^3.5.2"
+    "react-hot-loader": "^3.0.0-beta.2"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
-    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
