Added images and sidebar panel

--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-redux-react",
   "version": "1.0.0",
   "description": "SajRoz RESTAURANT frontend project",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "start": "node server"
   },
@@ -35,7 +35,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "html-webpack-plugin": "^2.16.1",
-    "json-loader": "^0.5.4",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
