poms improved, cosmetic changes off configuration files

--- a/bll/pom.xml
+++ b/bll/pom.xml
@@ -14,6 +14,8 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <dal.version>1.0-SNAPSHOT</dal.version>
         <spring.version>4.3.10.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
