--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -10,9 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dao</artifactId>
-jar
+    <packaging>jar</packaging>
+
     <properties>
         <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <hibernate.version>4.2.11.Final</hibernate.version>
         <servletapi.version>3.0.1</servletapi.version>
         <mysql.version>5.1.43</mysql.version>
@@ -61,7 +64,6 @@ jar
         </dependency>
 
         <!-- DB -->
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
