--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -22,6 +22,7 @@
         <spring.data.jpa.version>1.11.6.RELEASE</spring.data.jpa.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.6</slf4j.version>
+        <hibernate.spacial.varsion>4.0</hibernate.spacial.varsion>
     </properties>
 
     <dependencies>
@@ -35,6 +36,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <!-- Hibernate Spatial -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>${hibernate.spacial.varsion}</version>
         </dependency>
 
         <!-- ORM integration, e.g Hibernate -->
