corrected login to login by email and registration form also corrected User class for app, repaired maven conf for install witout errors

--- a/bll/pom.xml
+++ b/bll/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <dal.version>1.0-SNAPSHOT</dal.version>
         <spring.version>4.3.10.RELEASE</spring.version>
