--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -22,7 +22,7 @@
         <spring.data.jpa.version>1.11.6.RELEASE</spring.data.jpa.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.6</slf4j.version>
-        <hibernate.spacial.varsion>4.0</hibernate.spacial.varsion>
+        <hibernate.spacial.varsion>5.2.12.Final</hibernate.spacial.varsion>
     </properties>
 
     <dependencies>
