--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,9 @@
     "file-loader": "^0.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-hot-loader": "^3.0.0-beta.2"
+    "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
