--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sajroz.ai.restaurantwebapp</groupId>
-    <artifactId>MainProject</artifactId>
+    <artifactId>RestaurantWebapp</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project.version}</version>
 
     <modules>
         <module>bll</module>
@@ -19,13 +19,13 @@
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <dal.version>1.0-SNAPSHOT</dal.version>
+        <project.version>1.0-SNAPSHOT</project.version>
+        
         <spring.version>4.3.12.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <spring.security.oauth2.version>2.0.13.RELEASE</spring.security.oauth2.version>
         <servletapi.version>3.0.1</servletapi.version>
 
-        <dao.version>1.0-SNAPSHOT</dao.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
         <json.version>20160810</json.version>
         <junit.version>4.12</junit.version>
@@ -46,7 +46,7 @@
             <dependency>
                 <groupId>com.sajroz.ai.restaurantwebapp</groupId>
                 <artifactId>dal</artifactId>
-                <version>${dal.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <!-- Spring 3 dependencies -->
@@ -107,7 +107,7 @@
             <dependency>
                 <groupId>com.sajroz.ai.restaurantwebapp</groupId>
                 <artifactId>dao</artifactId>
-                <version>${dao.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <!-- mapper -->
@@ -190,6 +190,7 @@
                 <version>${logback.version}</version>
             </dependency>
         </dependencies>
+        
     </dependencyManagement>
 
 
