--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.sajroz.ai.restaurantwebapp</groupId>
     <artifactId>RestaurantWebapp</artifactId>
     <packaging>pom</packaging>
-    <version>${project.version}</version>
+    <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>bll</module>
@@ -18,8 +18,6 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <project.version>1.0-SNAPSHOT</project.version>
         
         <spring.version>4.3.12.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
@@ -28,6 +26,7 @@
 
         <mapstruct.version>1.2.0.Final</mapstruct.version>
         <json.version>20160810</json.version>
+        <jackson.version>2.8.0</jackson.version>
         <junit.version>4.12</junit.version>
 
         <hibernate.version>4.2.11.Final</hibernate.version>
@@ -137,6 +136,23 @@
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${json.version}</version>
+            </dependency>
+
+            <!-- JSON parser -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>jackson-annotations</artifactId>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- Hibernate ORM -->
