--- a/front/package.json
+++ b/front/package.json
@@ -26,8 +26,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
