--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/PawSaj/RestaurantWebapp#readme",
   "dependencies": {
+    "axios": "0.17.1",
     "file-loader": "^0.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
