--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,6 @@
   "homepage": "https://github.com/PawSaj/RestaurantWebapp#readme",
   "dependencies": {
     "axios": "0.17.1",
-    "file-loader": "^0.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
@@ -36,8 +35,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "0.28.7",
+    "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.16.1",
-    "webpack": "^1.13.0",
+    "node-sass": "4.7.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.1",
+    "webpack": "1.15.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
