--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "react": "^15.0.2",
+    "react-bootstrap": "0.31.5",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-router-dom": "4.2.2"
