--- a/front/package.json
+++ b/front/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/PawSaj/RestaurantWebapp#readme",
   "dependencies": {
     "axios": "0.17.1",
+    "base-64": "0.1.0",
     "react": "^15.0.2",
     "react-bootstrap": "0.31.5",
     "react-dom": "^15.0.2",
+    "react-dropzone": "4.2.3",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-router-dom": "4.2.2"
   },
