--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "axios": "0.17.1",
     "base-64": "0.1.0",
+    "moment": "2.20.1",
     "react": "^15.0.2",
+    "react-big-calendar": "0.17.0",
     "react-bootstrap": "0.31.5",
     "react-dom": "^15.0.2",
     "react-dropzone": "4.2.3",
