--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
 
         <mapstruct.version>1.2.0.Final</mapstruct.version>
         <json.version>20160810</json.version>
-        <jackson.version>2.8.0</jackson.version>
+        <jackson.version>2.9.3</jackson.version>
         <junit.version>4.12</junit.version>
 
-        <hibernate.version>4.2.11.Final</hibernate.version>
+        <hibernate.version>5.2.12.Final</hibernate.version>
         <servletapi.version>3.0.1</servletapi.version>
         <mysql.version>5.1.43</mysql.version>
         <spring.data.jpa.version>1.11.6.RELEASE</spring.data.jpa.version>
@@ -158,6 +158,21 @@
             <dependency>
                 <artifactId>jackson-annotations</artifactId>
                 <groupId>com.fasterxml.jackson.core</groupId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-parameter-names</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
 
