--- a/front/package.json
+++ b/front/package.json
@@ -31,7 +31,10 @@
     "react-dom": "^15.0.2",
     "react-dropzone": "4.2.3",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-router-dom": "4.2.2"
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
