--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
+    "recharts": "1.0.0-beta.7",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0"
   },
