--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "axios": "0.17.1",
     "base-64": "0.1.0",
+    "json-loader": "0.5.7",
     "moment": "2.20.1",
+    "moment-timezone": "0.5.14",
     "react": "^15.0.2",
     "react-big-calendar": "0.17.0",
     "react-bootstrap": "0.31.5",
